--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-10 col-sm-8 col-lg-6 headshot container">
             <img
-              src="./images/Formal Headshot.JPG"
+              src="./images/Formal Headshot2.jpg"
               class="d-block mx-lg-auto img-fluid headshot container"
               alt="Bootstrap Themes"
               loading="lazy"
