--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="./pdf/Jacob S White - Resume.pdf"
                   class="nav-link text-dark"
                 >
                   <img
