Added a game on resume and added JavaScript

--- a/index.html
+++ b/index.html
@@ -168,6 +168,20 @@
                   LinkedIn
                 </a>
               </li>
+              <li>
+                <a
+                  href="./simon/Simon Game Challenge Starting Files/index.html"
+                  class="nav-link text-dark"
+                >
+                  <img
+                    src="./images/joystick.svg"
+                    alt=""
+                    height="25px"
+                    class="bi d-block mx-auto mb-1"
+                  />
+                  Simon
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -224,6 +238,7 @@
               <li class="list-group-item list-header">Technical Skills</li>
               <li class="list-group-item">Requirements Gathering & Writing</li>
               <li class="list-group-item">HTML & CSS</li>
+              <li class="list-group-item">JavaScript</li>
               <li class="list-group-item">SQL</li>
               <li class="list-group-item">Python</li>
             </ul>
@@ -231,9 +246,8 @@
           <div class="col-lg-6 col-12 align-items-center py-2 container">
             <ul class="list-group px-2 py-2 d-block">
               <li class="list-group-item list-header">Soft Skills</li>
-              <li class="list-group-item">
-                Adaptive to dynamic work environments
-              </li>
+              <li class="list-group-item">Adaptive to dynamic work environments</li>
+              <li class="list-group-item">Analytical Problem Solver</li>
               <li class="list-group-item">Verbal and written communication</li>
               <li class="list-group-item">Proactive in improving processes</li>
               <li class="list-group-item">Collaborative mindset</li>
