corrected a bad link

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               </li>
               <li>
                 <a
-                  href="./simon/Simon Game Challenge Starting Files/index.html"
+                  href="./simon/Simon Game/index.html"
                   class="nav-link text-dark"
                 >
                   <img
