--- a/simon/Simon Game/index.html
+++ b/simon/Simon Game/index.html
@@ -31,10 +31,15 @@
       <div type="button" id="blue" class="btn blue">
 
       </div>
-
+      <div>
+      <button id="openKeyboard"> Open Keyboard </button>
+      </div>
+      <input id="hiddenInput">
     </div>
 
   </div>
+
+
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
