--- a/simon/Simon Game/index.html
+++ b/simon/Simon Game/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Press Start Game to Begin</h1>
   <div class="container">
     <div class="row">
 
@@ -32,9 +32,8 @@
 
       </div>
       <div>
-      <button id="openKeyboard"> Open Keyboard </button>
+      <button id="startGameButton">Start Game</button>
       </div>
-      <input id="hiddenInput">
     </div>
 
   </div>
