--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         font-family: "Gilda Display", serif;
       }
       .headshot {
-        border-radius: 50%;
+        border-radius: 35%;
       }
       .list-header {
         background-color: #6499e9;
@@ -128,8 +128,9 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="./pdf/Jacob S White - Resume.pdf"
                   class="nav-link text-dark"
+                  target="_blank"
                 >
                   <img
                     src="./images/download.svg"
@@ -158,6 +159,7 @@
                 <a
                   href="https://www.linkedin.com/in/jake-white-95606632/"
                   class="nav-link text-dark"
+                  target="_blank"
                 >
                   <img
                     src="./images/linkedin.svg"
@@ -166,20 +168,6 @@
                     class="bi d-block mx-auto mb-1"
                   />
                   LinkedIn
-                </a>
-              </li>
-              <li>
-                <a
-                  href="./simon/Simon Game/index.html"
-                  class="nav-link text-dark"
-                >
-                  <img
-                    src="./images/joystick.svg"
-                    alt=""
-                    height="25px"
-                    class="bi d-block mx-auto mb-1"
-                  />
-                  Simon
                 </a>
               </li>
             </ul>
@@ -191,7 +179,7 @@
     <section id="aboutme">
       <div class="container col-xxl-8 px-4 py-3">
         <div class="row flex-lg-row-reverse align-items-center g-5 pt-5">
-          <div class="col-10 col-sm-8 col-lg-6 headshot container">
+          <div class="col-12 col-sm-10 col-lg-5 headshot container">
             <img
               src="./images/Formal-Headshot.JPG"
               class="d-block mx-lg-auto img-fluid headshot container"
