--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <img
               src="./images/Formal-Headshot.JPG"
               class="d-block mx-lg-auto img-fluid headshot container"
-              alt="Bootstrap Themes"
+              alt="Headshot Image"
               loading="lazy"
             />
           </div>
