--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
         <div class="row flex-lg-row-reverse align-items-center g-5 pt-5">
           <div class="col-12 col-sm-10 col-lg-5 headshot container">
             <img
-              src="./images/Formal-Headshot.JPG"
+              src="./images/Formal-Headshot.jpg"
               class="d-block mx-lg-auto img-fluid headshot container"
-              alt="Headshot Image"
+              alt="HGeadshot Image"
               loading="lazy"
             />
           </div>
