Update resume with Business Analyst promotion

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             About Me
           </h2>
           <p class="lead">
-            Dynamic Solutions Analyst with 5+ years of experience bridging
+            Dynamic Business Analyst with 5+ years of experience bridging
             complex technical challenges with tangible business outcomes in
             Asset Management/FinTech. Expert in leveraging data-driven
             solutions, SQL, and Python to build, design, and optimize client
@@ -181,9 +181,20 @@
         <div class="feature col py-2 border-bottom">
           <div class="feature-icon d-inline-flex align-items-center border-bottom justify-content-center fs-2 mb-3">
             <img src="./images/salespage_technologies_logo.jpg" alt="" height="30px" />
+            <h3 class="fs-2 text-body-emphasis px-3">Business Analyst</h3>
+          </div>
+          <h5>Synfinii (formerly SalesPage Technologies) | Oct 2025 – Present</h5>
+          <ul>
+            <li>Promoted to Business Analyst to lead strategic initiatives and drive business value through data-driven
+              insights.</li>
+          </ul>
+        </div>
+        <div class="feature col py-2 border-bottom">
+          <div class="feature-icon d-inline-flex align-items-center border-bottom justify-content-center fs-2 mb-3">
+            <img src="./images/salespage_technologies_logo.jpg" alt="" height="30px" />
             <h3 class="fs-2 text-body-emphasis px-3">Solutions Analyst</h3>
           </div>
-          <h5>Synfinii (formerly SalesPage Technologies) | 2019 – Present</h5>
+          <h5>Synfinii (formerly SalesPage Technologies) | 2019 – Oct 2025</h5>
           <ul>
             <li>Engineered and implemented data-driven solutions for asset managers, enhancing sales and marketing
               strategies and achieving 50% improvement in key performance indicators.</li>
