--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start py-3">
         <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 me-lg-auto text-dark text-decoration-none">
-          <span class="fs-3 fw-bold display-font" style="color: var(--color-primary);">JW</span>
+          <span class="fs-3 fw-bold display-font logo-text">JW</span>
         </a>
 
         <ul class="nav col-12 col-lg-auto mb-2 justify-content-center mb-md-0 fw-medium">
@@ -36,7 +36,7 @@
           <a href="./pdf/Jacob%20White%20Resume.pdf" class="btn btn-outline-dark me-2 rounded-pill" target="_blank">
             Download CV
           </a>
-          <a href="mailto:jacob.samuel.white@gmail.com" class="btn btn-primary rounded-pill" style="background-color: var(--color-primary); border-color: var(--color-primary);">Contact</a>
+          <a href="mailto:jacob.samuel.white@gmail.com" class="btn btn-custom-primary rounded-pill">Contact</a>
         </div>
       </div>
     </div>
@@ -51,15 +51,15 @@
             loading="lazy" />
         </div>
         <div class="col-lg-6">
-          <h5 class="text-uppercase fw-bold mb-3" style="color: var(--color-secondary); letter-spacing: 2px;">Business Analyst</h5>
+          <h5 class="text-uppercase fw-bold mb-3 hero-subtitle">Business Analyst</h5>
           <h1 class="display-3 fw-bold lh-1 mb-3 text-dark">
-            Hello, I'm <span style="color: var(--color-primary);">Jake White</span>
+            Hello, I'm <span class="text-highlight">Jake White</span>
           </h1>
           <p class="lead mb-4 text-muted">
             Technical Business Analyst with over 6 years of experience in the FinTech and Asset Management sectors. Expert in bridging technical data engineering with business strategy through SQL, Python, and AI-driven solutions. Proven success in designing internal data quality tools, defining technical service frameworks, and managing complex data migrations for institutional clients.
           </p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <a href="#experience" class="btn btn-primary btn-lg px-4 me-md-2 rounded-pill shadow-sm" style="background-color: var(--color-primary); border: none;">View Experience</a>
+            <a href="#experience" class="btn btn-custom-primary btn-lg px-4 me-md-2 rounded-pill shadow-sm">View Experience</a>
             <a href="https://www.linkedin.com/in/jake-white-95606632/" target="_blank" class="btn btn-outline-secondary btn-lg px-4 rounded-pill">
               <img src="./images/linkedin.svg" alt="" height="20" class="me-2 opacity-75"> LinkedIn
             </a>
@@ -76,7 +76,7 @@
       <div class="row g-4">
         <div class="col-lg-4 col-md-6">
           <div class="modern-card h-100">
-            <h4 class="mb-3">Languages</h4>
+            <h3 class="mb-3 h4">Languages</h3>
             <div class="d-flex flex-wrap">
               <span class="skill-tag">Python</span>
               <span class="skill-tag">SQL (PostgreSQL, SQL Server)</span>
@@ -88,7 +88,7 @@
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="modern-card h-100">
-            <h4 class="mb-3">Tools & Platforms</h4>
+            <h3 class="mb-3 h4">Tools & Platforms</h3>
             <div class="d-flex flex-wrap">
               <span class="skill-tag">Google Cloud Platform (GCP)</span>
               <span class="skill-tag">Alteryx</span>
@@ -102,7 +102,7 @@
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="modern-card h-100">
-            <h4 class="mb-3">Competencies</h4>
+            <h3 class="mb-3 h4">Competencies</h3>
             <div class="d-flex flex-wrap">
               <span class="skill-tag">Data Analysis</span>
               <span class="skill-tag">Database Design</span>
@@ -119,104 +119,106 @@
   </section>
 
   <!--Experience-->
-  <section id="experience" class="py-5" style="background-color: #f8f9fa;">
+  <section id="experience" class="py-5 bg-light-custom">
     <div class="container py-5">
       <h2 class="section-title">Experience</h2>
       <div class="row g-4 justify-content-center">
         <div class="col-lg-10">
-          
-          <!-- Experience Item 1 -->
-          <div class="timeline-item mb-5">
-            <div class="modern-card">
-              <div class="d-md-flex justify-content-between align-items-center mb-2">
-                <div class="d-flex align-items-center gap-3">
-                   <div class="rounded p-2 bg-light">
-                      <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" height="40" class="rounded">
-                   </div>
-                   <div>
-                     <h3 class="h4 mb-0 fw-bold">Business Analyst</h3>
-                     <p class="text-muted mb-0">Synfinii (formerly SalesPage Technologies)</p>
-                   </div>
-                </div>
-                <span class="badge bg-primary rounded-pill mt-2 mt-md-0 px-3 py-2" style="background-color: var(--color-secondary) !important; color: black !important;">Oct 2025 – Present</span>
-              </div>
-              <ul class="text-muted mt-3 mb-0">
-                <li class="mb-2"><strong>Product Owner - Sightseer:</strong> Engineered and deployed an internal data monitoring and quality tool using Python and SQL that utilizes automated impact analysis to determine the urgency and priority of failures.</li>
-                <li class="mb-2"><strong>Systems Architecture:</strong> Architected the Synfinii Delivery Service definitions, standardizing technical onboarding for internal team members and improving service consistency across the Synfinii platform.</li>
-                <li><strong>AI Strategy:</strong> Integrating Generative AI workflows to streamline requirements gathering and enhance research for complex client solutioning.</li>
-              </ul>
-            </div>
-          </div>
+          <ul class="timeline-list">
 
-          <!-- Experience Item 2 -->
-          <div class="timeline-item mb-5">
-            <div class="modern-card">
-              <div class="d-md-flex justify-content-between align-items-center mb-2">
-                <div class="d-flex align-items-center gap-3">
-                   <div class="rounded p-2 bg-light">
-                      <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" height="40" class="rounded">
-                   </div>
-                   <div>
-                     <h3 class="h4 mb-0 fw-bold">Solutions Analyst</h3>
-                     <p class="text-muted mb-0">Synfinii (formerly SalesPage Technologies)</p>
-                   </div>
+            <!-- Experience Item 1 -->
+            <li class="timeline-item mb-5">
+              <div class="modern-card">
+                <div class="d-md-flex justify-content-between align-items-center mb-2">
+                  <div class="d-flex align-items-center gap-3">
+                     <div class="rounded p-2 bg-light">
+                        <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" height="40" class="rounded">
+                     </div>
+                     <div>
+                       <h3 class="h4 mb-0 fw-bold">Business Analyst</h3>
+                       <p class="text-muted mb-0">Synfinii (formerly SalesPage Technologies)</p>
+                     </div>
+                  </div>
+                  <span class="badge badge-highlight rounded-pill mt-2 mt-md-0 px-3 py-2">Oct 2025 – Present</span>
                 </div>
-                 <span class="badge bg-light text-dark border rounded-pill mt-2 mt-md-0 px-3 py-2">Jan 2023 – Nov 2025</span>
+                <ul class="text-muted mt-3 mb-0">
+                  <li class="mb-2"><strong>Product Owner - Sightseer:</strong> Engineered and deployed an internal data monitoring and quality tool using Python and SQL that utilizes automated impact analysis to determine the urgency and priority of failures.</li>
+                  <li class="mb-2"><strong>Systems Architecture:</strong> Architected the Synfinii Delivery Service definitions, standardizing technical onboarding for internal team members and improving service consistency across the Synfinii platform.</li>
+                  <li><strong>AI Strategy:</strong> Integrating Generative AI workflows to streamline requirements gathering and enhance research for complex client solutioning.</li>
+                </ul>
               </div>
-              <ul class="text-muted mt-3 mb-0" style="font-size: 0.95rem;">
-                <li class="mb-2"><strong>Technical Scoping:</strong> Authored comprehensive specifications for 50+ platform features, accelerating the development cycle by 150% through rigorous requirement gathering.</li>
-                <li class="mb-2"><strong>Data Onboarding:</strong> Collaborated with Asset Managers to integrate and leverage Discovery Data, FinTrx, and AdvizorPro client entity data for enhanced distribution strategies.</li>
-                <li class="mb-2"><strong>Process Automation:</strong> Migrated 3 key clients to modern data sources, automating tracking and reducing manual operational effort by 89%.</li>
-                <li><strong>Performance:</strong> Improved key performance indicators for sales and marketing strategies by 50% through data-driven solutioning and technical audits.</li>
-              </ul>
-            </div>
-          </div>
+            </li>
 
-          <!-- Experience Item 3 (New Role) -->
-          <div class="timeline-item mb-5">
-            <div class="modern-card">
-              <div class="d-md-flex justify-content-between align-items-center mb-2">
-                <div class="d-flex align-items-center gap-3">
-                   <div class="rounded p-2 bg-light">
-                      <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" height="40" class="rounded">
-                   </div>
-                   <div>
-                     <h3 class="h4 mb-0 fw-bold">Associate Solution Analyst</h3>
-                     <p class="text-muted mb-0">Synfinii (formerly SalesPage Technologies)</p>
-                   </div>
+            <!-- Experience Item 2 -->
+            <li class="timeline-item mb-5">
+              <div class="modern-card">
+                <div class="d-md-flex justify-content-between align-items-center mb-2">
+                  <div class="d-flex align-items-center gap-3">
+                     <div class="rounded p-2 bg-light">
+                        <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" height="40" class="rounded">
+                     </div>
+                     <div>
+                       <h3 class="h4 mb-0 fw-bold">Solutions Analyst</h3>
+                       <p class="text-muted mb-0">Synfinii (formerly SalesPage Technologies)</p>
+                     </div>
+                  </div>
+                   <span class="badge bg-light text-dark border rounded-pill mt-2 mt-md-0 px-3 py-2">Jan 2023 – Nov 2025</span>
                 </div>
-                 <span class="badge bg-light text-dark border rounded-pill mt-2 mt-md-0 px-3 py-2">Jan 2020 – Jan 2023</span>
+                <ul class="text-muted mt-3 mb-0">
+                  <li class="mb-2"><strong>Technical Scoping:</strong> Authored comprehensive specifications for 50+ platform features, accelerating the development cycle by 150% through rigorous requirement gathering.</li>
+                  <li class="mb-2"><strong>Data Onboarding:</strong> Collaborated with Asset Managers to integrate and leverage Discovery Data, FinTrx, and AdvizorPro client entity data for enhanced distribution strategies.</li>
+                  <li class="mb-2"><strong>Process Automation:</strong> Migrated 3 key clients to modern data sources, automating tracking and reducing manual operational effort by 89%.</li>
+                  <li><strong>Performance:</strong> Improved key performance indicators for sales and marketing strategies by 50% through data-driven solutioning and technical audits.</li>
+                </ul>
               </div>
-              <ul class="text-muted mt-3 mb-0" style="font-size: 0.95rem;">
-                <li class="mb-2"><strong>Enterprise Integration:</strong> Directed the technical upgrade for Nuveen, including the definition of requirements for their complex Salesforce environment integration.</li>
-                <li class="mb-2"><strong>Client Enablement:</strong> Trained and onboarded institutional clients onto the SalesPage Enterprise Platform, focusing on platform utilization, data quality, and best practices.</li>
-                <li><strong>Service Expansion:</strong> Successfully onboarded clients to LumaSuite, Advisor Atlas, and SalesPage Resolution Services.</li>
-              </ul>
-            </div>
-          </div>
+            </li>
 
-          <!-- Experience Item 4 -->
-           <div class="timeline-item">
-            <div class="modern-card">
-              <div class="d-md-flex justify-content-between align-items-center mb-2">
-                <div class="d-flex align-items-center gap-3">
-                   <div class="rounded p-2 bg-light">
-                      <img src="./images/westernmichu_logo.jpg" alt="WMU Logo" height="40" class="rounded">
-                   </div>
-                   <div>
-                     <h3 class="h4 mb-0 fw-bold">Undergraduate Research Assistant</h3>
-                     <p class="text-muted mb-0">Western Michigan University</p>
-                   </div>
+            <!-- Experience Item 3 (New Role) -->
+            <li class="timeline-item mb-5">
+              <div class="modern-card">
+                <div class="d-md-flex justify-content-between align-items-center mb-2">
+                  <div class="d-flex align-items-center gap-3">
+                     <div class="rounded p-2 bg-light">
+                        <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" height="40" class="rounded">
+                     </div>
+                     <div>
+                       <h3 class="h4 mb-0 fw-bold">Associate Solution Analyst</h3>
+                       <p class="text-muted mb-0">Synfinii (formerly SalesPage Technologies)</p>
+                     </div>
+                  </div>
+                   <span class="badge bg-light text-dark border rounded-pill mt-2 mt-md-0 px-3 py-2">Jan 2020 – Jan 2023</span>
                 </div>
-                <span class="badge bg-light text-dark border rounded-pill mt-2 mt-md-0 px-3 py-2">2017 – 2019</span>
+                <ul class="text-muted mt-3 mb-0">
+                  <li class="mb-2"><strong>Enterprise Integration:</strong> Directed the technical upgrade for Nuveen, including the definition of requirements for their complex Salesforce environment integration.</li>
+                  <li class="mb-2"><strong>Client Enablement:</strong> Trained and onboarded institutional clients onto the SalesPage Enterprise Platform, focusing on platform utilization, data quality, and best practices.</li>
+                  <li><strong>Service Expansion:</strong> Successfully onboarded clients to LumaSuite, Advisor Atlas, and SalesPage Resolution Services.</li>
+                </ul>
               </div>
-              <ul class="text-muted mt-3 mb-0">
-                <li class="mb-2"><strong>Data Integrity:</strong> Operated a particle accelerator and resolved complex technical issues with apparatus, ensuring 99.9% data integrity for experimental outputs.</li>
-                <li class="mb-2"><strong>Scientific Protocol:</strong> Designed crystal growth protocols and programmed specialized furnaces for superconductivity testing, focusing on Lead-Sulfide crystals.</li>
-              </ul>
-            </div>
-          </div>
+            </li>
 
+            <!-- Experience Item 4 -->
+             <li class="timeline-item">
+              <div class="modern-card">
+                <div class="d-md-flex justify-content-between align-items-center mb-2">
+                  <div class="d-flex align-items-center gap-3">
+                     <div class="rounded p-2 bg-light">
+                        <img src="./images/westernmichu_logo.jpg" alt="WMU Logo" height="40" class="rounded">
+                     </div>
+                     <div>
+                       <h3 class="h4 mb-0 fw-bold">Undergraduate Research Assistant</h3>
+                       <p class="text-muted mb-0">Western Michigan University</p>
+                     </div>
+                  </div>
+                  <span class="badge bg-light text-dark border rounded-pill mt-2 mt-md-0 px-3 py-2">2017 – 2019</span>
+                </div>
+                <ul class="text-muted mt-3 mb-0">
+                  <li class="mb-2"><strong>Data Integrity:</strong> Operated a particle accelerator and resolved complex technical issues with apparatus, ensuring 99.9% data integrity for experimental outputs.</li>
+                  <li class="mb-2"><strong>Scientific Protocol:</strong> Designed crystal growth protocols and programmed specialized furnaces for superconductivity testing, focusing on Lead-Sulfide crystals.</li>
+                </ul>
+              </div>
+            </li>
+
+          </ul>
         </div>
       </div>
     </div>
@@ -250,7 +252,7 @@
       <h2 class="section-title">Projects</h2>
       <div class="row g-4">
         <div class="col-lg-6">
-          <div class="modern-card h-100 border-top border-4 border-primary" style="border-top-color: var(--color-secondary) !important;">
+          <div class="modern-card h-100 border-top border-4 border-top-secondary">
             <div class="mb-3">
                <h3 class="fw-bold">Data Quality Check Platform</h3>
                <div class="mb-3 mt-2">
@@ -267,7 +269,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <div class="modern-card h-100 border-top border-4 border-primary" style="border-top-color: var(--color-primary) !important;">
+          <div class="modern-card h-100 border-top border-4 border-top-primary">
             <div class="mb-3">
                <h3 class="fw-bold">Hobby Tracker (In Development)</h3>
                <div class="mb-3 mt-2">
