--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-5 headshot-container mx-auto">
           <img src="./images/Formal-Headshot.jpg" class="d-block mx-lg-auto img-fluid" alt="Headshot of Jake White" width="817" height="1225"
-            loading="lazy" />
+            fetchpriority="high" />
         </div>
         <div class="col-lg-6">
           <h5 class="text-uppercase fw-bold mb-3 hero-subtitle">Business Analyst</h5>
@@ -128,7 +128,7 @@
           <ul class="timeline-list">
 
             <!-- Experience Item 1 -->
-            <li class="timeline-item mb-5">
+            <li class="timeline-item">
               <div class="modern-card">
                 <div class="d-md-flex justify-content-between align-items-center mb-2">
                   <div class="d-flex align-items-center gap-3">
@@ -151,7 +151,7 @@
             </li>
 
             <!-- Experience Item 2 -->
-            <li class="timeline-item mb-5">
+            <li class="timeline-item">
               <div class="modern-card">
                 <div class="d-md-flex justify-content-between align-items-center mb-2">
                   <div class="d-flex align-items-center gap-3">
@@ -175,7 +175,7 @@
             </li>
 
             <!-- Experience Item 3 (New Role) -->
-            <li class="timeline-item mb-5">
+            <li class="timeline-item">
               <div class="modern-card">
                 <div class="d-md-flex justify-content-between align-items-center mb-2">
                   <div class="d-flex align-items-center gap-3">
@@ -291,7 +291,7 @@
   <!--Footer-->
   <footer class="text-center py-5">
     <div class="container">
-      <p class="mb-0 text-white-50">&copy; <span id="current-year"></span> Jake White. All rights reserved.</p>
+      <p class="mb-0 text-white opacity-75">&copy; <span id="current-year"></span> Jake White. All rights reserved.</p>
     </div>
   </footer>
 
