--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           <div class="modern-card h-100 border-top border-4 border-top-primary">
             <div class="mb-3">
                <div class="d-flex justify-content-between align-items-center mb-2">
-                 <h3 class="fw-bold mb-0">Hobby Tracker</h3>
+                 <h3 class="fw-bold mb-0">Hobby Habbit (Hobby Tracker)</h3>
                  <a href="https://hobbyhabbit.com" target="_blank" class="btn btn-sm btn-outline-dark rounded-pill">Visit Site</a>
                </div>
                <div class="mb-3 mt-2">
