Refactor CSS for timeline and link security
- Replace redundant `.bg-light-custom` with standard Bootstrap `.bg-light`
- Add `rel="noopener noreferrer"` to external links
- Center timeline dots and improve mobile spacing
- Remove unused CSS rule

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </ul>
 
         <div class="ms-lg-3 text-end">
-          <a href="./pdf/Jacob%20White%20Resume.pdf" class="btn btn-outline-dark me-2 rounded-pill" target="_blank">
+          <a href="./pdf/Jacob%20White%20Resume.pdf" class="btn btn-outline-dark me-2 rounded-pill" target="_blank" rel="noopener noreferrer">
             Download CV (PDF)
           </a>
           <a href="mailto:jacob.samuel.white@gmail.com" class="btn btn-custom-primary rounded-pill">Contact</a>
@@ -61,7 +61,7 @@
           </p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
             <a href="#experience" class="btn btn-custom-primary btn-lg px-4 me-md-2 rounded-pill shadow-sm">View Experience</a>
-            <a href="https://www.linkedin.com/in/jake-white-95606632/" target="_blank" class="btn btn-outline-secondary btn-lg px-4 rounded-pill">
+            <a href="https://www.linkedin.com/in/jake-white-95606632/" target="_blank" class="btn btn-outline-secondary btn-lg px-4 rounded-pill" rel="noopener noreferrer">
               <img src="./images/linkedin.svg" alt="" width="20" height="20" class="me-2 opacity-75"> LinkedIn
             </a>
           </div>
@@ -120,7 +120,7 @@
   </section>
 
   <!--Experience-->
-  <section id="experience" class="py-5 bg-light-custom">
+  <section id="experience" class="py-5 bg-light">
     <div class="container py-5">
       <h2 class="section-title">Experience</h2>
       <div class="row g-4 justify-content-center">
@@ -237,8 +237,8 @@
                 <h3 class="h5 fw-bold mb-1">Western Michigan University</h3>
                 <p class="text-muted mb-2">Kalamazoo, MI | April 2019</p>
                 <div class="d-flex flex-column gap-1">
-                   <span class="badge bg-custom-light text-dark fw-normal border">B.S. Physics</span>
-                   <span class="badge bg-custom-light text-dark fw-normal border">B.S. Applied Mathematics</span>
+                   <span class="badge bg-light text-dark fw-normal border">B.S. Physics</span>
+                   <span class="badge bg-light text-dark fw-normal border">B.S. Applied Mathematics</span>
                 </div>
              </div>
           </div>
@@ -274,7 +274,7 @@
             <div class="mb-3">
                <div class="d-flex justify-content-between align-items-center mb-2">
                  <h3 class="fw-bold mb-0">Hobby Habbit (Hobby Tracker)</h3>
-                 <a href="https://hobbyhabbit.com" target="_blank" class="btn btn-sm btn-outline-dark rounded-pill">Visit Site</a>
+                 <a href="https://hobbyhabbit.com" target="_blank" class="btn btn-sm btn-outline-dark rounded-pill" rel="noopener noreferrer">Visit Site</a>
                </div>
                <div class="mb-3 mt-2">
                  <span class="skill-tag">Django</span>
