Refine index.html: Center Education section, add lazy loading, and enhance accessibility

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="d-md-flex justify-content-between align-items-center mb-2">
                   <div class="d-flex align-items-center gap-3">
                      <div class="rounded p-2 bg-light">
-                        <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" width="40" height="40" class="rounded">
+                        <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" width="40" height="40" class="rounded" loading="lazy">
                      </div>
                      <div>
                        <h3 class="h4 mb-0 fw-bold">Business Analyst</h3>
@@ -156,7 +156,7 @@
                 <div class="d-md-flex justify-content-between align-items-center mb-2">
                   <div class="d-flex align-items-center gap-3">
                      <div class="rounded p-2 bg-light">
-                        <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" width="40" height="40" class="rounded">
+                        <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" width="40" height="40" class="rounded" loading="lazy">
                      </div>
                      <div>
                        <h3 class="h4 mb-0 fw-bold">Solutions Analyst</h3>
@@ -180,7 +180,7 @@
                 <div class="d-md-flex justify-content-between align-items-center mb-2">
                   <div class="d-flex align-items-center gap-3">
                      <div class="rounded p-2 bg-light">
-                        <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" width="40" height="40" class="rounded">
+                        <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" width="40" height="40" class="rounded" loading="lazy">
                      </div>
                      <div>
                        <h3 class="h4 mb-0 fw-bold">Associate Solution Analyst</h3>
@@ -203,7 +203,7 @@
                 <div class="d-md-flex justify-content-between align-items-center mb-2">
                   <div class="d-flex align-items-center gap-3">
                      <div class="rounded p-2 bg-light">
-                        <img src="./images/westernmichu_logo.jpg" alt="WMU Logo" width="40" height="40" class="rounded">
+                        <img src="./images/westernmichu_logo.jpg" alt="WMU Logo" width="40" height="40" class="rounded" loading="lazy">
                      </div>
                      <div>
                        <h3 class="h4 mb-0 fw-bold">Undergraduate Research Assistant</h3>
@@ -229,10 +229,10 @@
   <section id="education" class="py-5 bg-white">
     <div class="container py-5">
       <h2 class="section-title">Education</h2>
-      <div class="row g-4">
+      <div class="row g-4 justify-content-center">
         <div class="col-lg-6">
           <div class="modern-card d-flex align-items-center p-4">
-             <img src="./images/westernmichu_logo.jpg" alt="WMU Logo" width="80" height="80" class="me-4 rounded">
+             <img src="./images/westernmichu_logo.jpg" alt="WMU Logo" width="80" height="80" class="me-4 rounded" loading="lazy">
              <div>
                 <h3 class="h5 fw-bold mb-1">Western Michigan University</h3>
                 <p class="text-muted mb-2">Kalamazoo, MI | April 2019</p>
@@ -274,7 +274,7 @@
             <div class="mb-3">
                <div class="d-flex justify-content-between align-items-center mb-2">
                  <h3 class="fw-bold mb-0">Hobby Habbit (Hobby Tracker)</h3>
-                 <a href="https://hobbyhabbit.com" target="_blank" class="btn btn-sm btn-outline-dark rounded-pill" rel="noopener noreferrer">Visit Site</a>
+                 <a href="https://hobbyhabbit.com" target="_blank" class="btn btn-sm btn-outline-dark rounded-pill" rel="noopener noreferrer" aria-label="Visit Hobby Habbit website">Visit Site</a>
                </div>
                <div class="mb-3 mt-2">
                  <span class="skill-tag">Django</span>
