Update resume content and improve UI
- Add Certifications section to Education & Certifications
- Fix timeline dot alignment (center on border)
- Ensure all content matches the source resume (MD file)
- Improve Education section layout with two columns

--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
   <!--Education-->
   <section id="education" class="py-5 bg-white">
     <div class="container py-5">
-      <h2 class="section-title">Education</h2>
+      <h2 class="section-title">Education & Certifications</h2>
       <div class="row g-4 justify-content-center">
         <div class="col-lg-6">
-          <div class="modern-card d-flex align-items-center p-4">
+          <div class="modern-card h-100 d-flex align-items-center p-4">
              <img src="./images/westernmichu_logo.jpg" alt="WMU Logo" width="80" height="80" class="me-4 rounded" loading="lazy">
              <div>
                 <h3 class="h5 fw-bold mb-1">Western Michigan University</h3>
@@ -240,6 +240,16 @@
                    <span class="badge bg-light text-dark fw-normal border">B.S. Physics</span>
                    <span class="badge bg-light text-dark fw-normal border">B.S. Applied Mathematics</span>
                 </div>
+             </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="modern-card h-100 p-4 d-flex flex-column justify-content-center">
+             <h3 class="h5 fw-bold mb-3">Certifications</h3>
+             <div class="d-flex flex-wrap gap-2">
+               <span class="badge bg-light text-dark fw-normal border">Gen AI: Navigate the Landscape</span>
+               <span class="badge bg-light text-dark fw-normal border">Introduction to AI</span>
+               <span class="badge bg-light text-dark fw-normal border">Client Needs and Software Requirements</span>
              </div>
           </div>
         </div>
