Refactor Skills to semantic list, add smooth scrolling and print styles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <nav class="glass-nav">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start py-3">
-        <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 me-lg-auto text-dark text-decoration-none">
+        <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 me-lg-auto text-dark text-decoration-none" aria-label="Home">
           <span class="fs-3 fw-bold display-font logo-text">JW</span>
         </a>
 
@@ -78,41 +78,41 @@
         <div class="col-lg-4 col-md-6">
           <div class="modern-card h-100">
             <h3 class="mb-3 h4">Languages</h3>
-            <div class="d-flex flex-wrap">
-              <span class="skill-tag">Python</span>
-              <span class="skill-tag">SQL (PostgreSQL, SQL Server)</span>
-              <span class="skill-tag">HTML</span>
-              <span class="skill-tag">CSS</span>
-              <span class="skill-tag">JavaScript</span>
-            </div>
+            <ul class="d-flex flex-wrap list-unstyled p-0 m-0">
+              <li class="skill-tag">Python</li>
+              <li class="skill-tag">SQL (PostgreSQL, SQL Server)</li>
+              <li class="skill-tag">HTML</li>
+              <li class="skill-tag">CSS</li>
+              <li class="skill-tag">JavaScript</li>
+            </ul>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="modern-card h-100">
             <h3 class="mb-3 h4">Tools & Platforms</h3>
-            <div class="d-flex flex-wrap">
-              <span class="skill-tag">Google Cloud Platform (GCP)</span>
-              <span class="skill-tag">Alteryx</span>
-              <span class="skill-tag">Git/GitHub</span>
-              <span class="skill-tag">Pandas/NumPy</span>
-              <span class="skill-tag">Salesforce CRM</span>
-              <span class="skill-tag">Docker</span>
-              <span class="skill-tag">Django</span>
-            </div>
+            <ul class="d-flex flex-wrap list-unstyled p-0 m-0">
+              <li class="skill-tag">Google Cloud Platform (GCP)</li>
+              <li class="skill-tag">Alteryx</li>
+              <li class="skill-tag">Git/GitHub</li>
+              <li class="skill-tag">Pandas/NumPy</li>
+              <li class="skill-tag">Salesforce CRM</li>
+              <li class="skill-tag">Docker</li>
+              <li class="skill-tag">Django</li>
+            </ul>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="modern-card h-100">
             <h3 class="mb-3 h4">Competencies</h3>
-            <div class="d-flex flex-wrap">
-              <span class="skill-tag">Data Analysis</span>
-              <span class="skill-tag">Database Design</span>
-              <span class="skill-tag">Technical Requirements</span>
-              <span class="skill-tag">Client Onboarding</span>
-              <span class="skill-tag">Process Optimization</span>
-              <span class="skill-tag">AI Integration</span>
-              <span class="skill-tag">Master Data Management</span>
-            </div>
+            <ul class="d-flex flex-wrap list-unstyled p-0 m-0">
+              <li class="skill-tag">Data Analysis</li>
+              <li class="skill-tag">Database Design</li>
+              <li class="skill-tag">Technical Requirements</li>
+              <li class="skill-tag">Client Onboarding</li>
+              <li class="skill-tag">Process Optimization</li>
+              <li class="skill-tag">AI Integration</li>
+              <li class="skill-tag">Master Data Management</li>
+            </ul>
           </div>
         </div>
       </div>
