Enhance portfolio UX, SEO, and visual consistency
- Add Open Graph meta tags for better social sharing previews.
- Implement Bootstrap ScrollSpy and `scroll-padding-top` to fix navigation highlighting and anchor link positioning.
- Enforce circular shape for headshot image using `aspect-ratio` and `object-fit`.
- Update LinkedIn button style to `btn-outline-dark` for better contrast.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Technical Business Analyst portfolio of Jake White. Expert in SQL, Python, and Data Strategy with experience in FinTech and Asset Management.">
+  <meta property="og:title" content="Jake White - Business Analyst" />
+  <meta property="og:description" content="Technical Business Analyst portfolio of Jake White. Expert in SQL, Python, and Data Strategy with experience in FinTech and Asset Management." />
+  <meta property="og:image" content="./images/Formal-Headshot.jpg" />
+  <meta property="og:type" content="website" />
   <title>Jake White - Business Analyst</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
@@ -16,9 +20,9 @@
   <link rel="icon" href="./images/layers-half.svg" />
 </head>
 
-<body>
+<body data-bs-spy="scroll" data-bs-target="#main-nav" tabindex="0">
   <!--Navbar-->
-  <nav class="glass-nav">
+  <nav class="glass-nav" id="main-nav">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start py-3">
         <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 me-lg-auto text-dark text-decoration-none" aria-label="Home">
@@ -61,7 +65,7 @@
           </p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
             <a href="#experience" class="btn btn-custom-primary btn-lg px-4 me-md-2 rounded-pill shadow-sm">View Experience</a>
-            <a href="https://www.linkedin.com/in/jake-white-95606632/" target="_blank" class="btn btn-outline-secondary btn-lg px-4 rounded-pill" rel="noopener noreferrer">
+            <a href="https://www.linkedin.com/in/jake-white-95606632/" target="_blank" class="btn btn-outline-dark btn-lg px-4 rounded-pill" rel="noopener noreferrer">
               <img src="./images/linkedin.svg" alt="" width="20" height="20" class="me-2 opacity-75"> LinkedIn
             </a>
           </div>
