Improve accessibility, content, and mobile styling
- Correct chemical name typo "Lead-Sulfide" to "Lead Sulfide" in index.html.
- Move tabindex="0" from body to navbar for better keyboard accessibility.
- Fix mobile padding inconsistency for the last timeline item in style.css.
- Add robots.txt to allow search engine indexing.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <link rel="icon" href="./images/layers-half.svg" />
 </head>
 
-<body data-bs-spy="scroll" data-bs-target="#main-nav" tabindex="0">
+<body data-bs-spy="scroll" data-bs-target="#main-nav">
   <!--Navbar-->
-  <nav class="glass-nav" id="main-nav">
+  <nav class="glass-nav" id="main-nav" tabindex="0">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start py-3">
         <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 me-lg-auto text-dark text-decoration-none" aria-label="Home">
@@ -221,7 +221,7 @@
                 </div>
                 <ul class="text-muted mt-3 mb-0">
                   <li class="mb-2"><strong>Data Integrity:</strong> Operated a particle accelerator and resolved complex technical issues with apparatus, ensuring 99.9% data integrity for experimental outputs.</li>
-                  <li class="mb-2"><strong>Scientific Protocol:</strong> Designed crystal growth protocols and programmed specialized furnaces for superconductivity testing, focusing on Lead-Sulfide crystals.</li>
+                  <li class="mb-2"><strong>Scientific Protocol:</strong> Designed crystal growth protocols and programmed specialized furnaces for superconductivity testing, focusing on Lead Sulfide crystals.</li>
                 </ul>
               </div>
             </li>
