--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                      </div>
                      <div>
                        <h3 class="h4 mb-0 fw-bold">Solutions Analyst</h3>
-                       <p class="text-muted mb-0">Synfinii (formerly SalesPage Technologies)</p>
+                       <p class="text-muted mb-0">SalesPage Technologies</p>
                      </div>
                   </div>
                    <span class="badge bg-light text-dark border rounded-pill mt-2 mt-md-0 px-3 py-2">Jan 2023 – Nov 2025</span>
@@ -191,7 +191,7 @@
                      </div>
                      <div>
                        <h3 class="h4 mb-0 fw-bold">Associate Solution Analyst</h3>
-                       <p class="text-muted mb-0">Synfinii (formerly SalesPage Technologies)</p>
+                       <p class="text-muted mb-0">SalesPage Technologies</p>
                      </div>
                   </div>
                    <span class="badge bg-light text-dark border rounded-pill mt-2 mt-md-0 px-3 py-2">Jan 2020 – Jan 2023</span>
