--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </picture>
         </div>
         <div class="col-lg-6">
-          <h5 class="text-uppercase fw-bold mb-3 hero-subtitle">Business Analyst</h5>
+          <div class="h5 text-uppercase fw-bold mb-3 hero-subtitle">Business Analyst</div>
           <h1 class="display-3 fw-bold lh-1 mb-3 text-dark">
             Hello, I'm <span class="text-highlight">Jake White</span>
           </h1>
