--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             Technical Business Analyst with over 6 years of experience in the FinTech and Asset Management sectors. Expert in bridging technical data engineering with business strategy through SQL, Python, and AI-driven solutions. Proven success in designing internal data quality tools, defining technical service frameworks, and managing complex data migrations for institutional clients.
           </p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <a href="#experience" class="btn btn-custom-primary btn-lg px-4 me-md-2 rounded-pill shadow-sm">View Experience</a>
+            <a href="#experience" class="btn btn-custom-primary btn-lg px-4 me-md-2 rounded-pill shadow-sm" aria-label="View Experience Section">View Experience</a>
             <a href="https://www.linkedin.com/in/jake-white-95606632/" target="_blank" class="btn btn-outline-dark btn-lg px-4 rounded-pill" rel="noopener noreferrer">
               <img src="./images/linkedin.svg" alt="" width="20" height="20" class="me-2 opacity-75"> LinkedIn
             </a>
