--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     />
     <meta property="og:image" content="./images/Formal-Headshot.jpg" />
     <meta property="og:type" content="website" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self'; style-src 'self' https://cdn.jsdelivr.net https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self';"
+    />
     <title>Jake White - Business Analyst</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -362,18 +366,6 @@
       </div>
     </footer>
 
-    <script>
-      document.getElementById("current-year").textContent = new Date().getFullYear();
-
-      // Email obfuscation
-      document.addEventListener("DOMContentLoaded", function () {
-        const emailLinks = document.querySelectorAll(".email-link");
-        emailLinks.forEach((link) => {
-          const user = link.getAttribute("data-user");
-          const domain = link.getAttribute("data-domain");
-          link.href = "mailto:" + user + "@" + domain;
-        });
-      });
-    </script>
+    <script src="script.js" defer></script>
   </body>
 </html>
