--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               clients.
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <a href="#experience" class="btn btn-custom-primary btn-lg px-4 me-md-2 rounded-pill shadow-sm">View Experience</a>
+              <a href="#experience" class="btn btn-custom-primary btn-lg px-4 me-md-2 rounded-pill shadow-sm" aria-label="View Experience Section">View Experience</a>
               <a
                 href="https://www.linkedin.com/in/jake-white-95606632/"
                 target="_blank"
@@ -362,6 +362,11 @@
       </div>
     </footer>
 
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <script>
       document.getElementById("current-year").textContent = new Date().getFullYear();
 
