--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
     <meta property="og:image" content="./images/Formal-Headshot.jpg" />
     <meta property="og:type" content="website" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://cdn.jsdelivr.net https://fonts.googleapis.com https://fonts.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' https://cdn.jsdelivr.net; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com;">
     <title>Jake White - Business Analyst</title>
     <link rel="stylesheet" href="bootstrap-custom.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -79,7 +80,7 @@
               clients.
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <a href="#experience" class="btn btn-custom-primary btn-lg px-4 me-md-2 rounded-pill shadow-sm">View Experience</a>
+              <a href="#experience" class="btn btn-custom-primary btn-lg px-4 me-md-2 rounded-pill shadow-sm" aria-label="View Experience Section">View Experience</a>
               <a
                 href="https://www.linkedin.com/in/jake-white-95606632/"
                 target="_blank"
@@ -358,18 +359,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script>
-      document.getElementById("current-year").textContent = new Date().getFullYear();
-
-      // Email obfuscation
-      document.addEventListener("DOMContentLoaded", function () {
-        const emailLinks = document.querySelectorAll(".email-link");
-        emailLinks.forEach((link) => {
-          const user = link.getAttribute("data-user");
-          const domain = link.getAttribute("data-domain");
-          link.href = "mailto:" + user + "@" + domain;
-        });
-      });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
