--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               clients.
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <a href="#experience" class="btn btn-custom-primary btn-lg px-4 me-md-2 rounded-pill shadow-sm">View Experience</a>
+              <a href="#experience" class="btn btn-custom-primary btn-lg px-4 me-md-2 rounded-pill shadow-sm" aria-label="View Experience Section">View Experience</a>
               <a
                 href="https://www.linkedin.com/in/jake-white-95606632/"
                 target="_blank"
@@ -358,18 +358,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script>
-      document.getElementById("current-year").textContent = new Date().getFullYear();
-
-      // Email obfuscation
-      document.addEventListener("DOMContentLoaded", function () {
-        const emailLinks = document.querySelectorAll(".email-link");
-        emailLinks.forEach((link) => {
-          const user = link.getAttribute("data-user");
-          const domain = link.getAttribute("data-domain");
-          link.href = "mailto:" + user + "@" + domain;
-        });
-      });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
