fix: capitalize FINTRX and regenerate PDF
Updated instances of "FinTrx" to "FINTRX" in index.html and pdf/Jacob White Resume.md to match official branding.
Regenerated pdf/Jacob White Resume.pdf using Playwright to ensure the downloadable resume matches the updated web content.
Verified changes with Playwright scripts and existing tests.

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                       gathering.
                     </li>
                     <li class="mb-2">
-                      <strong>Data Onboarding:</strong> Collaborated with Asset Managers to integrate and leverage Discovery Data, FinTrx, and AdvizorPro client entity data for enhanced distribution
+                      <strong>Data Onboarding:</strong> Collaborated with Asset Managers to integrate and leverage Discovery Data, FINTRX, and AdvizorPro client entity data for enhanced distribution
                       strategies.
                     </li>
                     <li class="mb-2">
