Fix typos and improve resume UI
- Corrected "Hobby Habbit" typo to "Hobby Habit" in index.html and resume markdown.
- Updated project URL to https://hobbyhabit.com.
- Adjusted timeline dot alignment to -4px for correct centering.
- Added .logo-img class to ensure logos render with object-fit: contain.
- Regenerated PDF resume with updates.
- Updated tests and verification scripts to reflect CSS changes.

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                   <div class="d-md-flex justify-content-between align-items-center mb-2">
                     <div class="d-flex align-items-center gap-3">
                       <div class="rounded p-2 bg-light">
-                        <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" width="40" height="40" class="rounded" loading="lazy" />
+                        <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" width="40" height="40" class="rounded logo-img" loading="lazy" />
                       </div>
                       <div>
                         <h3 class="h4 mb-0 fw-bold">Business Analyst</h3>
@@ -188,7 +188,7 @@
                   <div class="d-md-flex justify-content-between align-items-center mb-2">
                     <div class="d-flex align-items-center gap-3">
                       <div class="rounded p-2 bg-light">
-                        <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" width="40" height="40" class="rounded" loading="lazy" />
+                        <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" width="40" height="40" class="rounded logo-img" loading="lazy" />
                       </div>
                       <div>
                         <h3 class="h4 mb-0 fw-bold">Solutions Analyst</h3>
@@ -222,7 +222,7 @@
                   <div class="d-md-flex justify-content-between align-items-center mb-2">
                     <div class="d-flex align-items-center gap-3">
                       <div class="rounded p-2 bg-light">
-                        <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" width="40" height="40" class="rounded" loading="lazy" />
+                        <img src="./images/salespage_technologies_logo.jpg" alt="Synfinii Logo" width="40" height="40" class="rounded logo-img" loading="lazy" />
                       </div>
                       <div>
                         <h3 class="h4 mb-0 fw-bold">Associate Solution Analyst</h3>
@@ -250,7 +250,7 @@
                   <div class="d-md-flex justify-content-between align-items-center mb-2">
                     <div class="d-flex align-items-center gap-3">
                       <div class="rounded p-2 bg-light">
-                        <img src="./images/westernmichu_logo.jpg" alt="WMU Logo" width="40" height="40" class="rounded" loading="lazy" />
+                        <img src="./images/westernmichu_logo.jpg" alt="WMU Logo" width="40" height="40" class="rounded logo-img" loading="lazy" />
                       </div>
                       <div>
                         <h3 class="h4 mb-0 fw-bold">Undergraduate Research Assistant</h3>
@@ -282,7 +282,7 @@
         <div class="row g-4 justify-content-center">
           <div class="col-lg-6">
             <div class="modern-card h-100 d-flex align-items-center p-4">
-              <img src="./images/westernmichu_logo.jpg" alt="WMU Logo" width="80" height="80" class="me-4 rounded" loading="lazy" />
+              <img src="./images/westernmichu_logo.jpg" alt="WMU Logo" width="80" height="80" class="me-4 rounded logo-img" loading="lazy" />
               <div>
                 <h3 class="h5 fw-bold mb-1">Western Michigan University</h3>
                 <p class="text-muted mb-2">Kalamazoo, MI | April 2019</p>
@@ -333,8 +333,8 @@
             <div class="modern-card h-100 border-top border-4 border-top-primary">
               <div class="mb-3">
                 <div class="d-flex justify-content-between align-items-center mb-2">
-                  <h3 class="fw-bold mb-0">Hobby Habbit (Hobby Tracker)</h3>
-                  <a href="https://hobbyhabbit.com" target="_blank" class="btn btn-sm btn-outline-dark rounded-pill" rel="noopener noreferrer" aria-label="Visit Hobby Habbit website">Visit Site</a>
+                  <h3 class="fw-bold mb-0">Hobby Habit (Hobby Tracker)</h3>
+                  <a href="https://hobbyhabit.com" target="_blank" class="btn btn-sm btn-outline-dark rounded-pill" rel="noopener noreferrer" aria-label="Visit Hobby Habit website">Visit Site</a>
                 </div>
                 <div class="mb-3 mt-2">
                   <span class="skill-tag">Django</span>
